added more info in about page and css

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #202142;
   color: #fff;
   line-height: 1.6;
@@ -15,6 +15,10 @@ body {
 
 ul {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 .container {
@@ -91,11 +95,11 @@ header {
   color: #fff;
 }
 
-[type='radio'] {
+[type="radio"] {
   opacity: 0;
 }
 
-[type='radio']:checked ~ label {
+[type="radio"]:checked ~ label {
   background: #ff6a95;
   color: #fff;
 }
@@ -201,12 +205,22 @@ input:focus {
   color: #ff6a95;
 }
 
-.about h1 {
-  margin-bottom: 20px;
-}
-
 .about p {
   margin: 10px 0;
+}
+
+.about .links {
+  padding-bottom: 2rem;
+}
+
+.about .link {
+  display: flex;
+  align-items: center;
+  color: rgb(128, 128, 128);
+}
+
+.about .link:hover {
+  color: #ff6a95;
 }
 
 @media (max-width: 600px) {
